--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,7 +40,7 @@ body {
   content: '?';
   position: absolute;
   top: 35%;
-  left: 40%;
+  left: 42%;
   font-size: 32px;
   color: white;
   font-family: Arial;
@@ -59,6 +59,6 @@ body {
   left: 23%;
   font-size: 20px;
   color: white;
-  font-family: Arial;
+  font-family: sans-serif;
   text-transform: uppercase;
 }
